--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
-
+<meta name="google-site-verification" content="pNXjuLBkBnfkudmp2U7VZ45jh1ywtrCgwIxtbxhjLgE" />
   <body>
     <nav>
       <div class="logo">HEMANG K NANDA</div>
